# QtDashboardTemplate

./: .gitignore  CMakeLists.txt  LICENSE  README.md  qml.qrc
.github/workflows/: build.yml
src/: main.cpp
src/backend/: DataModel.cpp  DataModel.h  WeatherModel.cpp  WeatherModel.h  backend.cpp  backend.h
src/qml/: ChartCard.qml  Theme.qml  main.qml
